css/custom.css
.modal-footer {
  padding: 14px 15px 15px;e
  margin-bottom: 0;
  text-align: right;
  background-color: #494949;
  border-top: 1px solid #ddd;

  -webkit-border-radius: 0 0 6px 6px;
     -moz-border-radius: 0 0 6px 6px;
          border-radius: 0 0 6px 6px;
  *zoom: 1;
  -webkit-box-shadow: inset 0 1px 0 #ffffff;
     -moz-box-shadow: inset 0 1px 0 #ffffff;
          box-shadow: inset 0 1px 0 #ffffff;
}

.roboto-white {
  color: #e0e0e0;
}

.navbar-fixed {
  margin-left: 0px !important;
  margin-right: 0px !important;
  width: 100%;
}

.navbar-material-blue-900.navbar{
background-color: #0d113f;
color: rgba(255,255,255,.84)
}

.bg {
  background-image: url("../img/head.jpg");
  background-size:cover !important;
  background-repeat:no-repeat !important;
  height: 350px;
  margin-top: 50px;
/*  -webkit-background-size:cover !important;
  -moz-background-size:cover !important;
  -o-background-size:cover !important;
  background-position:center !important;*/

}
@media (max-width: 767px){
  .bg {
    margin-top: -20px;
  }
}

.header-name {
  font-size: 100px;
  float: right;
  padding-top:200px;
  padding-right: 40px;
  text-shadow: black 0.1em 0.1em 0.2em;
}

.header-text {
  font-size: 20px;
  float: right;
  padding-top:150px;
}

.footer-icons {
  display:inline-block;
}

.footer-text{
  margin-right: 10px;
}

.content-padding {
  padding-top:10px;
}

.panel {
  margin-bottom: 10px;
}

p {
  font-size:20px;
}

body{
  padding-left: 0px;
  padding-right: 0px;
}

.about-post {
  font-size:16px;
}

